deploy/ksql/schema-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: msc-schema-registry
  name: msc-schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msc-schema-registry
  template:
    metadata:
      labels:
        app: msc-schema-registry
    spec:
      enableServiceLinks: false
      containers:
        - name: msc-schema-registry
          image: confluentinc/cp-schema-registry:5.5.0
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: msc-schema-registry
  name: msc-schema-registry
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8081
  selector:
    app: msc-schema-registry
